# playing-with-gitpod

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  main.cpp
.theia/: c_cpp_properties.json
3rdparties/: glslang.sh
shaders/: compile.sh
src/: main.cpp  utils.h  validation_layer.h
src/shaders/: compile.sh  shader.comp.glsl
